update with introduction

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: thalikat
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hello friend, I'm Thalía!</h1>
+	<p>My favorite book is <em>Pride and Prejudice</em> by Jane Austen. I did not know how to introduce myself so I took a personality test for you and I was described as an INTP-T personality. It stands for introverted, intuitive, of a thinking nature rather than of a feeling one, I approach work in a prospecting rather than a judging manner, and the way I identify myself is more turbulent than assertive. This site is a way for me to track the happenings in my life as objectively as possible. Rather than attempting to dissect each moment through thought-provoking reflections, I will set up a timeline or charts. Meme garbage, if you will. The goal is to feel better at the end of the day. There is a lot to unpack so welcome! For a quick overview read more in the <a href="/about"> about page...</a></p>
 </div><!-- /.blurb -->
