about page created with intro

--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,6 @@ layout: default
 title: About
 ---
 <h1>About</h1>
-<p>This is a paragraph.</p>
+<p>My favorite book is <em>Pride and Prejudice</em> by Jane Austen. </p>
+<p> Twenty years old. </p>
+<p>I did not know how to introduce myself so I took a personality test for you and I was described as an INTP-T personality. It stands for introverted, intuitive, of a thinking nature rather than of a feeling one, I approach work in a prospecting rather than a judging manner, and the way I identify myself is more turbulent than assertive.</p>
