--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: thalikat
 ---
 <div class="blurb">
-	<h1>Hello, friend</h1>
+	<h1>Hello, world!</h1>
 	<p> This site is a collection of things. There is a lot to do so welcome! For a quick overview read more in the <a href="/about"> about page...</a></p>
 </div><!-- /.blurb -->
