--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: thalikat
 ---
 <div class="blurb">
 	<h1>Hello, world!</h1>
-	<p> This site is a collection of things. For a quick overview read more in the <a href="/about"> about page...</a></p>
+	<p> This site is a collection of things. For a quick overview read more in the <a href="/about"> about page.</a></p>
 </div><!-- /.blurb -->
