--- a/about/index.html
+++ b/about/index.html
@@ -6,3 +6,4 @@ title: About
 <p>Computer Science & Pure Math</p>
 <p> This is a sentence. </p>
 <p>This is another sentence. </p>
+<p>![Your Name Screencap](/_images/your-name-screencap1.jpg)</p>
