--- a/about/index.html
+++ b/about/index.html
@@ -6,4 +6,6 @@ title: About
 <p>Computer Science & Pure Math</p>
 <p> This is a sentence. </p>
 <p>This is another sentence. </p>
-<p>[Your Name Screencap](/_images/your-name-screencap1.jpg)</p>
+<a href="http://Fancaps.net/movies/MovieImages.php?name=Your_Name&movieid=1641">
+    <img src="https://mi.fancaps.net/Galleries/Your_Name_2016/Your_Name_2016_Screenshot_0054.jpg" />
+    </a>
