--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,7 @@ title: About
 
 <a href="http://Fancaps.net/movies/MovieImages.php?name=Your_Name&movieid=1641">
 <img src="https://mi.fancaps.net/Galleries/Your_Name_2016/Your_Name_2016_Screenshot_0054.jpg" />
+width="717" height="403" title="Your Name 2016"
 </a>
 
 
