--- a/about/index.html
+++ b/about/index.html
@@ -11,8 +11,8 @@ title: About
 <p>This is another sentence. </p>
 
 <a href="http://Fancaps.net/movies/MovieImages.php?name=Your_Name&movieid=1641">
-<img src="https://mi.fancaps.net/Galleries/Your_Name_2016/Your_Name_2016_Screenshot_0054.jpg" />
-width="717" height="403" title="Your Name 2016"
+<img src="https://mi.fancaps.net/Galleries/Your_Name_2016/Your_Name_2016_Screenshot_0054.jpg" alt="Image"
+style="width:717px;height:403px;">
 </a>
 
 
