--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,16 @@ title: About
 ---
 <h1>About</h1>
 
-<p>Computer Science & Pure Math</p>
+<p>
+    <h2>Education</h2>
+    <u1>Bachelor of Science in Computer Science, expected 2021</u1>
+    <u1>Pure Math minor</u1>
+</p>
 
-<p> This is a sentence. </p>
-
-<p>This is another sentence. </p>
+<p> 
+    <h2>Interests</h2>
+    This is another paragraph. 
+</p>
 
 <a href="http://Fancaps.net/movies/MovieImages.php?name=Your_Name&movieid=1641">
 <img src="https://mi.fancaps.net/Galleries/Your_Name_2016/Your_Name_2016_Screenshot_0054.jpg" alt="Image"
