--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,8 @@ title: About
 
 <p>
     <h2>Education</h2>
-    <u1>Bachelor of Science in Computer Science, expected 2021</u1>
-    <u1>Pure Math minor</u1>
+    <ul>Bachelor of Science in Computer Science, expected 2021</ul>
+    <ul>Pure Math minor</ul>
 </p>
 
 <p> 
