--- a/about/index.html
+++ b/about/index.html
@@ -6,13 +6,13 @@ title: About
 
 <p>
     <h2>Education</h2>
-    <ul>Bachelor of Science in Computer Science, expected 2021</ul>
-    <ul>Pure Math minor</ul>
+    <ul><li>Bachelor of Science in Computer Science, expected 2021</li></ul>
+    <ul><li>Pure Math minor</li></ul>
 </p>
 
 <p> 
     <h2>Interests</h2>
-    This is another paragraph. 
+    <ul><li>This is another paragraph.</li></ul>
 </p>
 
 <a href="http://Fancaps.net/movies/MovieImages.php?name=Your_Name&movieid=1641">
