--- a/project/index.html
+++ b/project/index.html
@@ -621,18 +621,7 @@
                 
                 <div class="status-bar">
                     <div class="grip"></div>
-                    <p>Date/Time: <span id="datetime"></span></p>
-                        <script>
-                            var dt = new Date();
-                            document.getElementById("datetime").innerHTML = 
-                            (("0" + (dt.getMonth() + 1)).slice(-2)) 
-                            + "/" 
-                            + (("0" + dt.getDate()).slice(-2)) + "/" 
-                            + (dt.getFullYear()) 
-                            + " " 
-                            + (("0" + dt.getHours() + 1).slice(-2)) 
-                            + ":" + (("0" + dt.getMinutes() + 1).slice(-2));
-</script>
+                    <p>Status bar.</p>
                 </div>
                 
             </div>
