--- a/sps/index.html
+++ b/sps/index.html
@@ -1,1 +1,5 @@
+---
+title: Society of Physics Students
+---
 
+<img src= https://66.media.tumblr.com/c0aaa3f1db9866707f459d2b59592e6d/tumblr_p2rj11JsCj1qzw1qyo1_540.gifv alt="Image">
