--- a/sps/index.html
+++ b/sps/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Society of Physics Students
 ---
 
-<h1> Yeah, I'm working on it.Come back another time, ty! </h1>
+<h1> Yeah, I'm working on it. Come back another time, thank you! </h1>
 
 <p>
     <img src= https://66.media.tumblr.com/c0aaa3f1db9866707f459d2b59592e6d/tumblr_p2rj11JsCj1qzw1qyo1_540.gifv alt="Image">
