Switched project to cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -17,7 +17,7 @@
         Masonry 4.2.1 (masonry.desandro.com)
         
         -->
-        <title>Project Site</title>
+        <title>CV</title>
         <meta charset="UTF-8">
         <meta name="description" content="">
     	<meta name="viewport" content="width=1080">
