--- a/cv/index.html
+++ b/cv/index.html
@@ -708,7 +708,7 @@
                             <p> 
                                 <u>
                                     <li>Updated clinic paperwork dating back to 2018 over the course of a month so business runs more efficiently. Developed a process for inputting invoices, both medical and business records. Basically, I maintain paperwork organization.</li>
-                                    <li>A clean clinic is a safe clinic. Kept surgery room, waiting area, bathrooms, kennels, patient room and front office sanitary. Clients, animal, and staff safety prioritized.</li>
+                                    <li>A clean clinic is a safe clinic. Kept surgery room, waiting area, bathrooms, kennels, patient room and front office sanitary.</li>
                                 </u>
                             </p>
                 </div>              
