--- a/cv/index.html
+++ b/cv/index.html
@@ -23,8 +23,7 @@
     	<meta name="viewport" content="width=1080">
     	<meta name="theme-color" content="#0000aa">
         <style>figure{margin:0}.tmblr-iframe{position:absolute}.tmblr-iframe.hide{display:none}.tmblr-iframe--amp-cta-button{visibility:hidden;position:fixed;bottom:10px;left:50%;transform:translateX(-50%);z-index:100}.tmblr-iframe--amp-cta-button.tmblr-iframe--loaded{visibility:visible;animation:iframe-app-cta-transition .2s ease-out}</style><link rel="shortcut icon" href="https://66.media.tumblr.com/43ed161dbcf1f1de23ab392e82c88c90/89b22f21ac1e4327-60/s128x128u_c1/bf8b4368aeef8b167aa35cca1a31b28b4e5f120c.jpg">
-        <link rel="apple-touch-icon" href="https://66.media.tumblr.com/43ed161dbcf1f1de23ab392e82c88c90/89b22f21ac1e4327-60/s128x128u_c1/bf8b4368aeef8b167aa35cca1a31b28b4e5f120c.jpg">
-        <link rel="alternate" type="application/rss+xml" href="https://ithacuh.tumblr.com/rss">
+        <link rel="apple-touch-icon" href="https://static.tumblr.com/5ioe7a0/1oxm1h9lx/avatar-state-01.png">
         
         <style>
         * {
@@ -602,7 +601,7 @@
                
                 <div class="menu-bar">
                     <ul class="menu-items">
-                        <a href="https://www.tumblr.com/reblog/190561299031/eqyny5BC"><li><span class="first-letter">F</span>un</li></a><a href="https://ithacuh.tumblr.com/post/190561299031/via"><li><span class="first-letter">P</span>ermalink</li></a><a target="_blank" href="https://t.umblr.com/redirect?z=https%3A%2F%2Fopen.spotify.com%2Ftrack%2F6wYaM4fje1JPp2WTjpaQEc%3Fsi%3DUqsZqYHeSfOtSqDnDid74w&amp;t=ZmNlNDgxZDc1NzliNjI0ZDQwNDA0YTY0YjczNmQ4ZTMwYTZlZmRjNywxOTA1NjEyOTkwMzE%3D&amp;b=t%3A9sKj-4Vu5loclqaVz7bvaA&amp;p=https%3A%2F%2Fithacuh.tumblr.com%2Fpost%2F190561299031%2Fvia&amp;m=0"><li><span class="first-letter">S</span>ource</li></a>
+                        <a href="https://www.quantamagazine.org/computer-science/"><li><span class="first-letter">Q</span>uanta Magazine</li></a><a href="https://blog.acolyer.org/"><li><span class="first-letter">M</span>orning Paper</li></a><a target="_blank" href="https://brandur.org/photos"><li><span class="first-letter">C</span>ool Pics</li></a>
                     </ul>
                 </div>
 
