--- a/cv/index.html
+++ b/cv/index.html
@@ -23,7 +23,7 @@
     	<meta name="viewport" content="width=1080">
     	<meta name="theme-color" content="#0000aa">
         <style>figure{margin:0}.tmblr-iframe{position:absolute}.tmblr-iframe.hide{display:none}.tmblr-iframe--amp-cta-button{visibility:hidden;position:fixed;bottom:10px;left:50%;transform:translateX(-50%);z-index:100}.tmblr-iframe--amp-cta-button.tmblr-iframe--loaded{visibility:visible;animation:iframe-app-cta-transition .2s ease-out}</style><link rel="shortcut icon" href="https://66.media.tumblr.com/43ed161dbcf1f1de23ab392e82c88c90/89b22f21ac1e4327-60/s128x128u_c1/bf8b4368aeef8b167aa35cca1a31b28b4e5f120c.jpg">
-        <link rel="apple-touch-icon" href="https://static.tumblr.com/5ioe7a0/1oxm1h9lx/avatar-state-01.png">
+        <link rel="icon" type="image/ico" href="https://static.tumblr.com/5ioe7a0/1oxm1h9lx/avatar-state-01.png" />
         
         <style>
         * {
