--- a/sps/index.html
+++ b/sps/index.html
@@ -3,8 +3,17 @@ layout: default
 title: Society of Physics Students
 ---
 
-<h1> Yeah, I'm working on it. Come back another time, thank you! </h1>
+<h1> Meetings and updates </h1>
 
 <p>
-    <img src= https://66.media.tumblr.com/c0aaa3f1db9866707f459d2b59592e6d/tumblr_p2rj11JsCj1qzw1qyo1_540.gifv alt="Image">
+    <h2>Our next meeting is February 20th, 2020. </h2>
+
+    <h3>The club so far:</h3>
+    <ul type="circle">
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+    </ul>
 </p>
