--- a/sps/index.html
+++ b/sps/index.html
@@ -3,17 +3,33 @@ layout: default
 title: Society of Physics Students
 ---
 
-<h1> Meetings and updates </h1>
+<h1> Society of Physics Students - Edinburg </h1>
 
 <p>
-    <h2>Our next meeting is February 20th, 2020. </h2>
+    <h2><u>Our next meeting is February 20th, 2020.</u></h2>
 
-    <h3>The club so far:</h3>
+    <h2>Who We Are</h2>
+    <p>The only requirement for membership is an interest in physics! The Society of Physics Students consists of highly motivated individuals across many disciplines such as physics, 
+        chemistry, computer science, engineering, geology, mathematics, medicine, and other fields. </p>
+
+    <p>Within SPS is housed <a target="_blank" rel="noopener noreferrer" href="https://www.spsnational.org/about/sigma-pi-sigma">Sigma Pi Sigma</a>, the national physics honor society, which elects members on the basis of outstanding academic achievement.  
+        This unique two-in-one society operates within the <a target="_blank" rel="noopener noreferrer" href="https://www.aip.org/">American Institute of Physics</a>, an umbrella organization for ten other professional science societies.</p>
+
+    <h2>Achievements</h2>
     <ul type="circle">
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
+        <li>2019 Distinguished Chapter Award</li>
+        <li>2018 Distinguished Chapter Award</li>
+        <li>2017 Distinguished Chapter Award</li>
+        <li>2016 Outstanding Chapter Award</li>
+        <li>2015 Outstanding Chapter Award as UT-Pan American</li>
+        <li>2014 Distinguished Chapter Award as UT-Pan American</li>
+    </ul>
+
+    <h2>So far in 2020 - </h2>
+    <ul type="circle">
+        <li>January 17th-19th: <a target="_blank" rel="noopener noreferrer" href="https://cuwip.tamu.edu/">CUWiP 2020</a> at Texas A&M</li>
+        <li>February 1st: Presented demos for the Mother-Daughter Program at UTRGV</li>
+        <li>February 8th: Presented demos for the Father-Son Program at UTRGV</li>
+        <li>February 8th: Participated in the 2020 Regional Science Bowl</li>
     </ul>
 </p>
