--- a/sps/index.html
+++ b/sps/index.html
@@ -6,7 +6,7 @@ title: Society of Physics Students
 <h1> Society of Physics Students - Edinburg </h1>
 
 <p>
-    <h2><u>Our next meeting is February 20th, 2020.</u></h2>
+    <h2><u><a href = "https://www.cdc.gov/coronavirus/2019-ncov/index.html">COVID-19 information from the CDC</a></u></h2>
 
     <h2>Who We Are</h2>
     <p>The only requirement for membership is an interest in physics! The Society of Physics Students consists of highly motivated individuals across many disciplines such as physics, 
