--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: default
 title: Personal
 ---
 <div class="blurb">
+
 	<h1>Hello, world!</h1>
+
 	<p> This site is a collection of things. For a quick overview read more in the <a href="/about"><u>about page</u>.</a></p>
+
+	<img src="_images/home_palm_trees.png" alt="Palm Trees">
+
 </div><!-- /.blurb -->
