--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ title: Personal
 
 	<p> This site is a collection of things. For a quick overview read more in the <a href="/about"><u>about page</u>.</a></p>
 
-	<img src="https://github.com/thaliajuarez/thaliajuarez.github.io/blob/master/_images/home_palm_trees.png" alt="Palm Trees">
+	<img src="https://github.com/thaliajuarez/thaliajuarez.github.io/blob/master/_images/home_palm_trees.png">
 
 </div><!-- /.blurb -->
