--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Personal
 	<p> This site is a collection of things. For a quick overview read more in the <a href="/about"><u>about page</u>.</a></p>
 
 	<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49831567428/in/photostream/" title="home_palm_trees">
-	<img src="https://live.staticflickr.com/65535/49831567428_740a3c8507_z.jpg" width="640" height="480" alt="home_palm_trees">
+	<img src="https://live.staticflickr.com/65535/49831567428_740a3c8507_z.jpg" width="640" height="480" alt="home_palm_trees" class="center">
 	</a>
 	<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
