--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ title: Personal
 	<h1>Hello, world!</h1>
 
 	<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49831567428/in/photostream/" title="home_palm_trees">
-	<img src="https://live.staticflickr.com/65535/49831567428_740a3c8507_z.jpg" width="640" height="480" alt="home_palm_trees">
+	<img src="https://live.staticflickr.com/65535/49831567428_740a3c8507_z.jpg" alt="home_palm_trees">
 	</a>
 	<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
-
+<!----width="640" height="480"--->
 </div><!-- /.blurb -->
