--- a/sps/index.html
+++ b/sps/index.html
@@ -3,8 +3,6 @@ layout: sps
 title: Society of Physics Students
 ---
 
-<h1> Society of Physics Students - Edinburg </h1>
-
 <p>
     <h2><u><a href = "https://www.cdc.gov/coronavirus/2019-ncov/index.html">COVID-19 information from the CDC</a></u></h2>
 
@@ -25,7 +23,7 @@ title: Society of Physics Students
         <li>2014 Distinguished Chapter Award as UT-Pan American</li>
     </ul>
 
-    <h2>So far in 2020 - </h2>
+    <h2>So far in 2020:</h2>
     <ul type="circle">
         <li>January 17th-19th: <a target="_blank" rel="noopener noreferrer" href="https://cuwip.tamu.edu/">CUWiP 2020</a> at Texas A&M</li>
         <li>February 1st: Presented demos for the Mother-Daughter Program at UTRGV</li>
