--- a/sps/index.html
+++ b/sps/index.html
@@ -1,8 +1,7 @@
 ---
 layout: sps
-title: Society of Physics Students
 ---
-
+<h1> Society of Physics Students - Edinburg, TX </h1>
 <p>
     <h2><u><a href = "https://www.cdc.gov/coronavirus/2019-ncov/index.html">COVID-19 information from the CDC</a></u></h2>
 
