--- a/sps/demos.html
+++ b/sps/demos.html
@@ -2,3 +2,31 @@
 layout: sps
 ---
 <h1>Demos</h1>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49831995668/in/dateposted-public/" title="community_outreach_demo">
+    <img src="https://live.staticflickr.com/65535/49831995668_20a29ea941_z.jpg" width="640" height="480" alt="community_outreach_demo"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49832531621/in/dateposted-public/" title="hs_physics_recruitment_demo">
+    <img src="https://live.staticflickr.com/65535/49832531621_ee31edbccc_z.jpg" width="640" height="480" alt="hs_physics_recruitment_demo"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49832839532/in/dateposted-public/" title="women_in_stem_talk">
+    <img src="https://live.staticflickr.com/65535/49832839532_1393dca3ee_z.jpg" width="640" height="480" alt="women_in_stem_talk"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49832839622/in/dateposted-public/" title="women_in_stem_demo1">
+    <img src="https://live.staticflickr.com/65535/49832839622_520686f452_z.jpg" width="640" height="480" alt="women_in_stem_demo1"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/albums/72157714085553336" title="Girls in STEM - UTRGV Spring 2020">
+    <img src="https://live.staticflickr.com/65535/49832839532_1393dca3ee_z.jpg" width="640" height="480" alt="Girls in STEM - UTRGV Spring 2020"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49832531586/in/dateposted-public/" title="meeting_group_pic">
+    <img src="https://live.staticflickr.com/65535/49832531586_04e87e8c73_z.jpg" width="640" height="480" alt="meeting_group_pic"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49831995643/in/dateposted-public/" title="congrats_sps_cake">
+    <img src="https://live.staticflickr.com/65535/49831995643_e5dda2d7ac_z.jpg" width="640" height="480" alt="congrats_sps_cake"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
