--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,40 @@
 ---
 layout: default
-title: About
 ---
+
+<h1>About</h1>
+
+<p>Hi! I'm Thalia, studying computer science and math at school.</p>
+
+<p>
+    I created this site to learn a little bit more about web development. In that process, I created 
+    a mock site for the Society of Physics Students, aka SPS, on the Edinburg campus. The SPS link on 
+    the menu will take you to the page containing more information about the organization.
+</p>
+
+<h3>Computer Science Courses</h3>
+<ul>
+    <li>CSCI 1101 Introduction to Computer Science</li>
+        <li>CSCI 1170 Engineering Computer Science I Lab</li>
+        <li>CSCI 1370 Engineering Computer Science I</li>
+        <li>CSCI 2333 Computer Organization and Assembly Language</li>
+        <li>COSC 2425 Computing Sciences Concepts II (JAVA)</li>
+        <li>CSCI 2344 Programming in UNIX / Linux Environment</li>
+        <li>CSCI 2380 Computer Science II (or CSCI 2388 Honors)</li>
+        <li>CSCI 3310 Mathematical Foundations of Computer Science</li>
+ </ul>
+
+ <h3>Mathematics Courses</h3>
+ <ul>
+    <li>MATH 2413 Calculus I</li>
+    <li>MATH 2414 Calculus II</li>
+    <li>MATH 2415 Calculus III</li>
+    <li>MATH 2318 Linear Algebra</li>
+    <li>STAT 3337 Probability and Statistics</li>
+    <li>MATH 3350 Introduction to Mathematical Proof</li>
+ </ul>
+
+<p>
+    Other than academics, I am a sucker for crime tv shows like Bones, Castle, Criminal Minds, and The X-Files.
+    The quarantine also has me binging all Tom Cruise movies and playing through Zelda: Breath of the Wild.
+</p>
