--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@ layout: default
         <li>CSCI 2333 Computer Organization and Assembly Language</li>
         <li>COSC 2425 Computing Sciences Concepts II (JAVA)</li>
         <li>CSCI 2344 Programming in UNIX / Linux Environment</li>
-        <li>CSCI 2380 Computer Science II (or CSCI 2388 Honors)</li>
+        <li>CSCI 2380 Computer Science II</li>
         <li>CSCI 3310 Mathematical Foundations of Computer Science</li>
  </ul>
 
