--- a/about/index.html
+++ b/about/index.html
@@ -7,9 +7,8 @@ layout: default
 <p>Hi! I'm Thalia, studying computer science and math at school.</p>
 
 <p>
-    I created this site to learn a little bit more about web development. In that process, I created 
-    a mock site for the Society of Physics Students, aka SPS, on the Edinburg campus. The SPS link on 
-    the menu will take you to the page containing more information about the organization.
+    I created this site to learn a little bit more about web development. I created 
+    a mock site for the <a href="/sps" target="_blank" rel="noopener noreferrer"><u>Society of Physics Students</u></a>, aka SPS, on the Edinburg campus.
 </p>
 
 <h3>Computer Science Courses</h3>
@@ -22,6 +21,7 @@ layout: default
         <li>CSCI 2344 Programming in UNIX / Linux Environment</li>
         <li>CSCI 2380 Computer Science II</li>
         <li>CSCI 3310 Mathematical Foundations of Computer Science</li>
+        <li>CSCI 4319 Digital Forensics</li>
  </ul>
 
  <h3>Mathematics Courses</h3>
@@ -32,9 +32,7 @@ layout: default
     <li>MATH 2318 Linear Algebra</li>
     <li>STAT 3337 Probability and Statistics</li>
     <li>MATH 3350 Introduction to Mathematical Proof</li>
+    <li>MATH 4391 Research: High Performance Computations for Random
+        Network Models of Parental Vaccine Acceptance
+        and Disease Spread</li>
  </ul>
-
-<p>
-    Other than academics, I am a sucker for crime tv shows like Bones, Castle, Criminal Minds, and The X-Files.
-    The quarantine also has me binging all Tom Cruise movies and playing through Zelda: Breath of the Wild.
-</p>
