--- a/sps/photos.html
+++ b/sps/photos.html
@@ -4,5 +4,7 @@ layout: sps
 <h1>Photos</h1>
 
 <a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/albums/72157714085553336" title="Society of Physics Students">
-    <img src="https://live.staticflickr.com/65535/49832839532_1393dca3ee_z.jpg" width="640" height="480" alt="Society of Physics Students"></a>
+    <img src="https://live.staticflickr.com/65535/49832839532_1393dca3ee_z.jpg" width="640" height="480" alt="Society of Physics Students" class="center">
+</a>
+
 <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
