--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,9 @@ layout: default
 <p>Hi! I'm Thalia, studying computer science and math at school.</p>
 
 <p>
-    I created this site to learn a little bit more about web development. I created 
-    a mock site for the <a href="/sps" target="_blank" rel="noopener noreferrer"><u>Society of Physics Students</u></a>, aka SPS, on the Edinburg campus.
+    To learn a little bit more about web development, I created this static site with 
+    <a href="https://help.github.com/en/github/working-with-github-pages/setting-up-a-github-pages-site-with-jekyll" target="_blank" rel="noopener noreferrer">Jekyll</a> 
+    and a mock site for the <a href="/sps" target="_blank" rel="noopener noreferrer"><u>Society of Physics Students - Edinburg</u></a>, aka SPS.
 </p>
 
 <h3>Computer Science Courses</h3>
