--- a/courses/index.html
+++ b/courses/index.html
@@ -1,23 +1,29 @@
 ---
 layout: default
-title: lorem ipsum
+title: Courses
 ---
-<h1>HTML Ipsum Presents</h1>
-
-<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-
-<h2>Header Level 2</h2>
-
-<ol>
-   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-   <li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
-
-<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
-
-<h3>Header Level 3</h3>
-
+<h3>Computer Science Courses</h3>
 <ul>
-   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-   <li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
+    <li>CSCI 1101 Introduction to Computer Science</li>
+        <li>CSCI 1170 Engineering Computer Science I Lab</li>
+        <li>CSCI 1370 Engineering Computer Science I</li>
+        <li>CSCI 2333 Computer Organization and Assembly Language</li>
+        <li>COSC 2425 Computing Sciences Concepts II (JAVA)</li>
+        <li>CSCI 2344 Programming in UNIX / Linux Environment</li>
+        <li>CSCI 2380 Computer Science II</li>
+        <li>CSCI 3310 Mathematical Foundations of Computer Science</li>
+        <li>CSCI 4319 Digital Forensics</li>
+ </ul>
+
+ <h3>Mathematics Courses</h3>
+ <ul>
+    <li>MATH 2413 Calculus I</li>
+    <li>MATH 2414 Calculus II</li>
+    <li>MATH 2415 Calculus III</li>
+    <li>MATH 2318 Linear Algebra</li>
+    <li>STAT 3337 Probability and Statistics</li>
+    <li>MATH 3350 Introduction to Mathematical Proof</li>
+    <li>MATH 4391 Research Seminar: High Performance Computations for Random
+        Network Models of Parental Vaccine Acceptance
+        and Disease Spread</li>
+ </ul>
