--- a/punch_in/index.html
+++ b/punch_in/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <form role="form" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+    <form role="form" method="post">
       <div class="form-group row">
         <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
