--- a/punch_in/index.html
+++ b/punch_in/index.html
@@ -9,6 +9,7 @@
   <title>Punch In</title>
 </head>
 <body>
+    <?php echo date('l, F jS, Y'); ?>
   <div class="container">
     <form role="form" method="post">
       <div class="form-group row">
