--- a/courses/index.html
+++ b/courses/index.html
@@ -23,7 +23,7 @@ title: Courses
     <li>MATH 2318 Linear Algebra</li>
     <li>STAT 3337 Probability and Statistics</li>
     <li>MATH 3350 Introduction to Mathematical Proof</li>
-    <li>MATH 4391 Research Seminar: High Performance Computations for Random
+    <li><a href="https://github.com/thaliajuarez/thaliajuarez.github.io/blob/master/_pdf/CuPy_Epidemic(1).pdf" target="_blank">MATH 4391 Research Seminar: High Performance Computations for Random
         Network Models of Parental Vaccine Acceptance
-        and Disease Spread</li>
+        and Disease Spread</a></li>
  </ul>
