--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@ title: Personal
 
 	<h1>Hello, world!</h1>
 
+	<p>Hi! I'm studying computer science and math at school.</p>
+
+	<h3>Computer Science Courses</h3>
+	<ul>
+    	<li>Algorithms & Data Structures</li>
+    	<li>Operating Systems</li>
+    	<li>Software Engineering</li>
+    	<li>Digital Forensics</li>
+ 	</ul>
+
+<h3>Mathematics Courses</h3>
+<ul>
+    <li>Calculus I, II, and III</li>
+    <li>Probability and Statistics</li>
+    <li>Introduction to Mathematical Proof</li>
+    <li><a href="https://github.com/thaliajuarez/thaliajuarez.github.io/blob/master/_pdf/CuPy_Epidemic(1).pdf" target="_blank">MATH 4391 Research Seminar: High Performance Computations for Random
+        Network Models of Parental Vaccine Acceptance
+        and Disease Spread</a></li>
+</ul>
+
+
 	<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49831567428/in/photostream/" title="home_palm_trees">
 	<img src="https://live.staticflickr.com/65535/49831567428_740a3c8507_z.jpg" alt="home_palm_trees">
 	</a>
