--- a/index.html
+++ b/index.html
@@ -5,26 +5,18 @@ title: Personal
 <div class="blurb">
 
 	<h1>Hello, world!</h1>
+	<p>I'm studying computer science at school.</p>
 
-	<p>Hi! I'm studying computer science and math at school.</p>
-
-	<h3>Computer Science Courses</h3>
+	<h3>Coursework</h3>
 	<ul>
     	<li>Algorithms & Data Structures</li>
     	<li>Operating Systems</li>
     	<li>Software Engineering</li>
     	<li>Digital Forensics</li>
- 	</ul>
-
-<h3>Mathematics Courses</h3>
-<ul>
-    <li>Calculus I, II, and III</li>
-    <li>Probability and Statistics</li>
-    <li>Introduction to Mathematical Proof</li>
-    <li><a href="https://github.com/thaliajuarez/thaliajuarez.github.io/blob/master/_pdf/CuPy_Epidemic(1).pdf" target="_blank">MATH 4391 Research Seminar: High Performance Computations for Random
+    	<li><a href="https://github.com/thaliajuarez/thaliajuarez.github.io/blob/master/_pdf/CuPy_Epidemic(1).pdf" target="_blank">MATH Research: High Performance Computations for Random
         Network Models of Parental Vaccine Acceptance
         and Disease Spread</a></li>
-</ul>
+	</ul>
 
 
 	<a data-flickr-embed="true" href="https://www.flickr.com/photos/188186726@N02/49831567428/in/photostream/" title="home_palm_trees">
